<resources>
    <string name="app_name">guardiancamera_wifi</string>
    <string name="currentUser"> </string>

    <string name="TITLE_APP"> Lazyboy\'s\nGuardianCam </string>
    <string name="STAT_CAM_CONNECTED"> Camera Connected </string>
    <string name="STAT_CAM_DISCONNECTED"> Camera Disconnected </string>
    <string name="STAT_SERVER_CONNECTED"> Server\nConnected </string>
    <string name="STAT_SERVER_DISCONNECTED"> Server\nDisconnected </string>
    <string name="STAT_CAM_RECORDING"> Idle </string>
    <string name="STAT_CAM_IDLE"> Recording </string>
    <string name="STAT_EXT_CAM"> Wifi\nCamera</string>
    <string name="STAT_PHONE"> Phone\nCamera</string>

    <string name="INDEX_LOGIN_METHOD"> Login Method </string>
    <string name="LOGIN_GOOGLE"> GOOGLE </string>
    <string name="LOGIN_KAKAO"> KAKAO </string>

    <string name="AUTH_SERVER_ADDRESS">http://www.lazyweb.com/user_register.php</string>
    <string name="AUTH_SERVER_ADDRESS_IP">http://192.168.43.74/user_register.php</string>
    <string name="STREAMING_SERVER_ADDRESS">127.0.0.1</string>


    <string name="MENU_START_CAPTURE"> Capture </string>
    <string name="MENU_STOP_CAPTURE"> Stop </string>
    <string name="MENU_HOME"> Home </string>
    <string name="MENU_WATCH_STREAM"> Watch </string>
    <string name="MENU_LIST_PEERS"> Friends</string>
    <string name="MENU_SETTINGS"> Settings </string>

    <string name="VIDEO_SIZE_LABEL"> Resolution </string>
    <string name="VIDEO_SIZE_QCIF"> 320X240 </string>
    <string name="VIDEO_SIZE_VGA"> 640X480 </string>
    <string name="VIDEO_SIZE_SVGA"> 800X600 </string>

    <string name="FORMAT_LABEL"> Formats </string>
    <string name="FORMAT_RGB565"> RGB565 </string>
    <string name="FORMAT_MJPEG"> MJPEG </string>

    <string name="SAVE_SETTING_LABEL"> SAVE </string>

    <string name="MODE_LABEL"> Capture \n Mode </string>
    <string name="MODE_EXTERNAL"> External Camera </string>
    <string name="MODE_PHONE"> Phone </string>

    <string name="LOGS_LABEL"> Logs </string>


    <string-array name="WIFI_VIDEO_RESOLUTIONS">
        <item>QCIF(320 X 240)</item>
        <item>VGA(640 X 480)</item>
        <item>SVGA(800 X 600)</item>
        <item>HD(1280 X 720)</item>
        <item>FULL HD(1920 X 1080)</item>
    </string-array>


    <string-array name="WIFI_VIDEO_FORMATS">
        <item>MJPEG</item>
        <item>RGB565</item>
    </string-array>


    <string-array name="WIFI_VIDEO_SOURCES">
        <item>Guardian Camera</item>
        <item>Phone Camera</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
