<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeersActivity">

    <LinearLayout
        android:id="@+id/MainMenu"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/captureStartBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4E4949"
            android:gravity="center"
            android:text="@string/MENU_START_CAPTURE"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4E4949"
            android:gravity="center"
            android:text="@string/MENU_HOME"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/videoViewBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4E4949"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/MENU_WATCH_STREAM"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/peerListBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4E4949"
            android:gravity="center"
            android:text="@string/MENU_LIST_PEERS"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/settingBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4E4949"
            android:gravity="center"
            android:text="@string/MENU_SETTINGS"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peerList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/MainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>